# csXMouse

./: .gitignore  CMakeLists.txt  README.md
Win32/: CMakeLists.txt
Win32/Win32/: CMakeLists.txt
Win32/Win32/examples/: example_DialogBase.cpp
Win32/Win32/include/Win32/: CheckBox.h  DialogBase.h  SysParam.h  Types.h  Window.h
Win32/Win32/resource/: DialogBase.rc  DialogBaseRes.h
Win32/Win32/src/: CheckBox.cpp  DialogBase.cpp  SysParam.cpp  Window.cpp
csXMouse/: CMakeLists.txt
csXMouse/include/: XMouse.h
csXMouse/resource/: XMouse.rc  XMouseRes.h
csXMouse/src/: XMouse.cpp  main.cpp
